--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "kitten-world",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "An evil kitten app",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -17,6 +17,6 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "9.4.4"
+    "electron": "4.2.12"
   }
 }
